--- a/src/plugins/dolozhee/fileattachpage.ui
+++ b/src/plugins/dolozhee/fileattachpage.ui
@@ -20,7 +20,7 @@
    <string>On this page you can attach files to the issue, like log files for a bug report.</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
-   <property name="margin">
+   <property name="margin" stdset="0">
     <number>0</number>
    </property>
    <item>
@@ -33,6 +33,9 @@
        <property name="text">
         <string>Add...</string>
        </property>
+       <property name="icon">
+        <iconset theme="QIcon::ThemeIcon::ListAdd"/>
+       </property>
       </widget>
      </item>
      <item>
@@ -40,12 +43,15 @@
        <property name="text">
         <string>Remove</string>
        </property>
+       <property name="icon">
+        <iconset theme="QIcon::ThemeIcon::ListRemove"/>
+       </property>
       </widget>
      </item>
      <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
-        <enum>Qt::Vertical</enum>
+        <enum>Qt::Orientation::Vertical</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
