[Azoth] It's 2026, we can make the join dialog wider

--- a/src/plugins/azoth/components/dialogs/joinconferencedialog.ui
+++ b/src/plugins/azoth/components/dialogs/joinconferencedialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>208</height>
+    <width>700</width>
+    <height>203</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <item>
     <layout class="QFormLayout" name="formLayout">
      <property name="fieldGrowthPolicy">
-      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+      <enum>QFormLayout::FieldGrowthPolicy::AllNonFixedFieldsGrow</enum>
      </property>
      <item row="0" column="0">
       <widget class="QLabel" name="label_2">
@@ -32,7 +32,7 @@
      <item row="0" column="1">
       <widget class="QComboBox" name="HistoryBox_">
        <property name="insertPolicy">
-        <enum>QComboBox::InsertAlphabetically</enum>
+        <enum>QComboBox::InsertPolicy::InsertAlphabetically</enum>
        </property>
       </widget>
      </item>
@@ -49,7 +49,7 @@
      <item row="1" column="1">
       <widget class="QComboBox" name="BookmarksBox_">
        <property name="insertPolicy">
-        <enum>QComboBox::InsertAlphabetically</enum>
+        <enum>QComboBox::InsertPolicy::InsertAlphabetically</enum>
        </property>
       </widget>
      </item>
@@ -66,7 +66,7 @@
      <item row="2" column="1">
       <widget class="QComboBox" name="AccountBox_">
        <property name="insertPolicy">
-        <enum>QComboBox::InsertAlphabetically</enum>
+        <enum>QComboBox::InsertPolicy::InsertAlphabetically</enum>
        </property>
       </widget>
      </item>
@@ -75,13 +75,13 @@
    <item>
     <widget class="QFrame" name="JoinWidgetFrame_">
      <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
+      <enum>QFrame::Shape::StyledPanel</enum>
      </property>
      <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
+      <enum>QFrame::Shadow::Raised</enum>
      </property>
      <layout class="QVBoxLayout" name="JoinWidgetFrameLayout_">
-      <property name="margin">
+      <property name="margin" stdset="0">
        <number>1</number>
       </property>
      </layout>
@@ -97,10 +97,10 @@
    <item>
     <widget class="QDialogButtonBox" name="ButtonBox_">
      <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+      <enum>Qt::Orientation::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
      </property>
     </widget>
    </item>
