[Azoth] Rename "File transfer request:" → "Incoming file:"

--- a/src/plugins/azoth/components/chat/fileofferedpane.ui
+++ b/src/plugins/azoth/components/chat/fileofferedpane.ui
@@ -30,7 +30,7 @@
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>File transfer request:</string>
+      <string>Incoming file:</string>
      </property>
     </widget>
    </item>
