--- a/src/plugins/azoth/components/chat/fileofferedpane.ui
+++ b/src/plugins/azoth/components/chat/fileofferedpane.ui
@@ -42,6 +42,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QLabel" name="FileSize_">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Orientation::Horizontal</enum>
