--- a/src/plugins/azoth/components/chat/fileofferedpane.ui
+++ b/src/plugins/azoth/components/chat/fileofferedpane.ui
@@ -52,12 +52,22 @@
     </widget>
    </item>
    <item>
-    <widget class="QPushButton" name="AcceptButton_">
+    <widget class="QPushButton" name="SaveButton_">
      <property name="text">
-      <string>Accept</string>
+      <string>Save</string>
      </property>
      <property name="icon">
       <iconset theme="QIcon::ThemeIcon::DocumentSave"/>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="SaveAsButton_">
+     <property name="text">
+      <string>Save as…</string>
+     </property>
+     <property name="icon">
+      <iconset theme="QIcon::ThemeIcon::DocumentSaveAs"/>
      </property>
     </widget>
    </item>
